<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              xmlns:tools="http://schemas.android.com/tools"
              android:gravity="center"
              android:orientation="vertical">
    <!--Last thing added -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_thing_added"
            android:layout_marginEnd="8dp"
            />

        <TextView
            android:id="@+id/last_thing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            tools:text="laptop"/>

    </LinearLayout>
    <!-- What new thing -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/what_thing" />

        <EditText
            android:id="@+id/what_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />
    </LinearLayout>
    <!-- Where is new thing -->
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/where" />

        <EditText
            android:id="@+id/where_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionSend"
            />
    </LinearLayout>

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_thing" />

    <Button
        android:id="@+id/list_all_things"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_all_things" />


</LinearLayout>